[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Virken"
version = "0.0.1"
authors = [
  { name="Justin Wozniak", email="justin@wozniaks.org" },
]
description = "A version control menu"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
virken = "virken.main:main"

[project.urls]
"Homepage" = "https://github.com/j-woz/virken"
"Bug Tracker" = "https://github.com/j-woz/virken/issues"

[tool.setuptools.package-data]
virken = ["etc/help.txt"]
